<resources>
    <string name="app_name">My Talks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation drawer-->
    <string name="action_settings">Settings</string>
    <string name="item_sms">Messages</string>
    <string name="item_calls">Calls</string>
    <string name="item_home">Home</string>
    <string name="item_map">Map</string>
    <string name="item_settings">Settings</string>
    <string name="item_preferences">Preferences</string>
    <string name="item_help">Help</string>
    <string name="item_data">Data</string>

    <string name="title_activity_maps">Map</string>

    <!--Fragment Home-->
    <string name="tv_lineOneNumber">Number</string>
    <string name="tv_standardNumber">+55 (31) 9 9999–1234</string>
    <string name="tv_callsLabel">Calls</string>
    <string name="tv_smsLabel">Messages</string>
    <string name="tv_numberOfCalls">32</string>
    <string name="tv_numberOfsms">12</string>
    <string name="tv_resume">Resume</string>
    <string name="tv_wifiConnect">Wifi: </string>
    <string name="tv_wifiConnected">Conected</string>
    <string name="tv_home_LBL_WifiName">Network Name:</string>
    <string name="tv_home_Status_wifiName">eduroam</string>
    <string name="tv_home_LBL_dataStatus">Data Package:</string>
    <string name="tv_home_LBL_dataConnected">Disconected</string>
    <string name="tv_home_LBL_dataSignal">Signal Quality:</string>
    <string name="tv_home_LBL_dataSignalStatus">Good</string>
    <string name="tv_home_LBL_wifiHotspots">Nerby Networks:</string>
    <string name="tv_home_LBL_wifiNumberHotspots">2</string>


    <string name="tv_data_lbl_signalquality">Signal Quality</string>
    <string name="tv_data_lbl_dadosUsados">Data Package</string>
    <string name="tv_data_pacoteBase">0GB</string>
    <string name="tv_data_pacoteMax">2GB</string>
    <string name="tv_data_lbl_usado">Used Package:</string>
    <string name="tv_data_usado">1.5GB</string>
    <string name="tv_data_lbl_restante">Package Left:</string>
    <string name="tv_data_restante">500MB</string>
    <string name="tv_data_lbl_apps">Use per Application:</string>
    <string name="eu">Myself</string>
    <string name="tv_call_enviados">Made Calls</string>
    <string name="tv_call_recebidos">Recieved Calls</string>
    <string name="tv_call_listname">Calls</string>
    <string name="tv_sms_enviados">Made Messages</string>
    <string name="tv_sms_recebidos">Recieved Messages</string>
    <string name="tv_sms_listname">Messages</string>
    <string name="tv_sms_item_local">PUC Minas</string>
    <string name="tv_sms_item_sms">Messages</string>
    <string name="tv_sms_item_to">To:</string>
    <string name="tv_sms_item_origin">Myself</string>
    <string name="tv_sms_item_target">Humberto</string>
    <string name="tv_sms_item_from">From:</string>
    <string name="tv_sms_item_fromNumber">Myself</string>
    <string name="tv_call_item_from">From:</string>
    <string name="tv_call_item_origin">Igor</string>
    <string name="tv_call_item_to">To:</string>
    <string name="tv_call_item_target">Myself</string>
    <string name="tv_call_item_address">Puc Minas</string>
    <string name="tv_call_item_itime">20:40</string>
    <string name="tv_call_item_ftime">- 20:45</string>

    <string name="map">Mapa de Antenas</string>
    <string name="antenna">Antenas mais utilizadas</string>
    <string name="settings">Opções</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="tip">Tipo de conexão:</string>
    <string name="mnc">Operadora:</string>
    <string name="mcc">País:</string>
    <string name="cid">Indent Antena:</string>
    <string name="datUti">Dados Utilizados</string>
    <string name="dateSt">Plan Start Date: </string>
    <string name="date">Alterar Dados</string>
    <string name="dataMax">Data Package Size: </string>
    <string name="dataPhone">Your CellPhone: </string>
    <string name="dataFirst">Escolha a data de inicio e o tamanho do seu plano: </string>


    <string name="permission">Please allow the application to access the data so that is possible to show the use.</string>
    <string name="intro_text">This sample demonstrates how a notification is created using the
        <b>NotificationCompatBuilder</b>
        with a custom content view. The layout of the notification is defined as a
        layout resource and inflated as a <b>RemoteViews</b> object.
        \n\nOn API level 16 and above, a different layout is inflated and set as
        the <i>big content view</i>, which is used when the notification is expanded.
        \n\n<b>Use the button below to create the notification.
        \n\nIf your device is running Jelly Bean or above, try expanding or collapsing
        the notification to see the different layouts.</b>
    </string>
    <string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
        notification.
    </string>
    <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
        notification.
    </string>

    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
    <string name="collapsed">I\'m the collapsed notification.\nCreated at: %s</string>
    <string name="show_notification">Show Notification</string>
    <string name="custom_notification">I\'m a custom notification.</string>

</resources>
