<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sms_item_from"/>
                    <TextView
                        android:id="@+id/tv_sms_item_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sms_item_fromNumber"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sms_item_to"/>

                    <TextView
                        android:id="@+id/tv_sms_item_target"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sms_item_target"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_sms_item_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_sms_item_sms"
                    android:maxLines="1"
                    android:maxLength="32"/>
                <TextView
                    android:id="@+id/tv_sms_item_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_sms_item_local"
                    android:maxLength="32"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>
            <View android:layout_height="8dp"
                android:layout_width="match_parent"
                android:background="#08f200"/>
        </LinearLayout>
</LinearLayout>
</RelativeLayout>