<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginBottom="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_call_item_from"/>
                            <TextView
                                android:id="@+id/tv_call_item_origin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLength="12"
                                android:maxLines="1"
                                android:text="@string/tv_call_item_origin"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_call_item_to"/>
                            <TextView
                                android:id="@+id/tv_call_item_target"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:maxLength="12"
                                android:text="@string/tv_call_item_target"/>

                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="8dp"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tv_call_item_itime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_call_item_itime"/>
                            <TextView
                                android:id="@+id/tv_call_item_ftime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@string/tv_call_item_ftime"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_call_item_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLength="60"
                                android:maxLines="1"
                                android:text="@string/tv_call_item_address"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_height="8dp"
                    android:layout_width="match_parent"
                    android:background="#08f200"/>
            </LinearLayout>
    </LinearLayout>
</RelativeLayout>